fix/ overflow-wrap - break-word in html editor

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,7 @@ html, body {
 
 .angular-editor-textarea {
   border: 2px solid #383838 !important;
+  overflow-wrap: break-word !important;
 }
 
 .angular-editor-button {
